# laguchori-latex

./: .gitignore  LICENSE  README.md  input.tex  output.tex  preambule.tex  pyproject.toml  test.py  test_cleaner.py  test_generator.py
.github/workflows/: publish.yml  tests.yml
.venv_pypi/: pyvenv.cfg
.venv_pypi_test/: pyvenv.cfg
.venv_test/: pyvenv.cfg
src/laguchori_latex/: __init__.py  cleaner.py  parser.py
tests/: test-basic.py  test_basic.py
