[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laguchori-latex"
version = "0.1.1"
description = "LaTeX <-> JSON parser/generator for structured math documents"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Ahmed Bj" }]
keywords = ["latex", "parser", "json", "generator"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

# CLI (optionnel mais professionnel)
[project.scripts]
laguchori-latex = "laguchori_latex.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100